# popayarip

./: .gitignore  README.md  gpatcher.cmd  gpatcher.md  gpatcher.ps1  install.ps1  pyproject.toml
lib/: Apply.ps1  Common.ps1  Create.ps1  IA.ps1  Interactive.ps1  Manifest.ps1  Restore.ps1
src/gpatcher/: gpatcher.tcss  tui.py
src/gpatcher/core/: common.py
src/gpatcher/tui_screens/: __init__.py  apply.py  base.py  create.py  doctor.py  restore.py  search_fetch.py  update.py  upload.py  verify.py
tests/: smoke.ps1
