[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpatcher"
version = "0.3.1"
description = "Game Delta Patching Dashboard & CLI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "internetarchive>=3.0.0",
    "requests>=2.25.0",
]

[project.scripts]
gpatcher = "gpatcher.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
